--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                     <span id="menu-line3"></span>
                 </button>
             </nav>
-            <section class="bg-hero min-vh-100 d-flex align-items-center">
-                <div class="container-main ">
-                    <div class="row">
+            <section class="bg-hero py-5 py-lg-5 d-flex align-items-center">
+                <div class="container-main py-md-3 py-lg-5 ">
+                    <div class="row py-md-4 py-lg-5">
                         <div class="col-12 col-lg-8 position-relative">
-                            <h1 class="color-white fs-64 fw-300 text-uppercase lh-108 ff-sunflower pr-35 pb-1 pb-md-3">
+                            <h1 class="color-white fs-64 fw-300 text-uppercase lh-108 ff-sunflower pr-35 pb-2 pb-md-3">
                                 We
                                 are
                                 believers decentralization and <span class="web-line">Web3.</span></h1>
@@ -78,7 +78,7 @@
                                     More</a>
                             </div>
 
-                            <a class="hero-arrow" href="#footer" alt="">
+                            <a class="hero-arrow" href="#services" alt="">
                                 <img src="./assets/images/svg/arrow.svg" alt="">
                             </a>
                         </div>
@@ -228,8 +228,8 @@
             </div>
         </section>
         <!-- section-5 -->
-        <section id="projects" class="bg-project  pt-5 pt-lg-5  overflow-hidden">
-            <div class="container-main pt-5">
+        <section id="projects" class="bg-project  py-sm-5 py-md-4 pt-lg-4  overflow-hidden">
+            <div class="container-main pt-sm-5  pt-lg-2">
                 <div class="d-flex flex-column align-items-center justify-content-center pt-5">
                     <h2 class="fs-56 fw-300 lh-108 text-uppercase ff-sunflower color-black  project-line mt-2">
                         Projects</h2>
@@ -237,26 +237,26 @@
                         ultrices nunc. Ipsum, nibh egestas vehicula tellus. Molestie
                         adipiscing diam nibh lectus. Magna id nisl quis vestibulum rhoncus.</p>
                 </div>
-                <div class="row  py-5 pt-lg-5 justify-content-center gap-4 gap-lg-0">
-                    <div class="col-sm-5 col-lg-3 ">
+                <div class="row  py-5 py-lg-0 pt-lg-5 justify-content-center gap- gap-lg-0">
+                    <div class="col-6 col-lg-3 ">
                         <div class="position-relative project-box cursor">
                             <img width="100%" src="./assets/images/png/img-1.png" alt="">
                             <p class="color-white hover-text fs-20 ff-sunflower fw-700 lh-108 py-12">The Tokyo Tem</p>
                         </div>
                     </div>
-                    <div class="col-sm-5 col-lg-3 ">
+                    <div class="col-6 col-lg-3 ">
                         <div class="position-relative project-box cursor">
                             <img width="100%" src="./assets/images/png/img-2.png" alt="">
                             <p class="color-white hover-text fs-20 ff-sunflower fw-700 lh-108 py-12">The Tokyo Tem</p>
                         </div>
                     </div>
-                    <div class="col-sm-5 col-lg-3 ">
+                    <div class="col-6 col-lg-3 pt-3 pt-lg-0">
                         <div class="position-relative project-box cursor">
                             <img width="100%" src="./assets/images/png/img-3.png" alt="">
                             <p class="color-white hover-text fs-20 ff-sunflower fw-700 lh-108 py-12">The Tokyo Tem</p>
                         </div>
                     </div>
-                    <div class="col-sm-5 col-lg-3 ">
+                    <div class="col-6 col-lg-3 pt-3 pt-lg-0 ">
                         <div class="position-relative project-box cursor">
                             <img width="100%" src="./assets/images/png/img-4.png" alt="">
                             <p class="color-white hover-text fs-20 ff-sunflower fw-700 lh-108 py-12">The Tokyo Tem</p>
@@ -291,14 +291,14 @@
                 </div>
 
                 <span class="d-flex justify-content-center pb-5 py-lg-5">
-                    <a class="btn-view2 fs-16 color-black ff-sunflower fw-500 btn-hover2" href="">View All</a>
+                    <a class="btn-view2 fs-16 color-black ff-sunflower fw-500 btn-hover2 " href="">View All</a>
                 </span>
             </div>
         </section>
         <!-- footer -->
-        <footer id="footer" class="position-relative overflow-hidden pt-5">
+        <footer id="footer" class="position-relative overflow-hidden pt-1">
             <div class="blur-circle d-none d-lg-block"></div>
-            <section class="pt-4 pt-lg-5">
+            <section class="pt-3 pt-lg-5">
                 <div class="container-main">
                     <div class="d-flex flex-column justify-content-center align-items-center">
                         <h2 class="text-uppercase color-white fs-56 fw-300 lh-108 ff-sunflower about-line">About</h2>
@@ -326,7 +326,7 @@
                     <div class="d-flex align-items-center gap-3 justify-content-center pb-1 pt-5">
                         <img class="cursor" src="./assets/images/svg/ig.svg" alt="">
                         <img class="cursor" src="./assets/images/svg/twitter.svg" alt="">
-                        <img class="cursor" src="./assets/images/svg/fb.svg" alt="">
+                        <img class="cursor fb" src="./assets/images/svg/fb.svg" alt="">
                         <img class="mt-2 cursor" src="./assets/images/svg/yt.svg" alt="">
                     </div>
                 </div>
