--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 
     <!-- Meta Tags Generated with https://metatags.io -->
 </head>
-<div id="Preloader"
+<!-- <div id="Preloader"
     class=" min-vh-100 position-fixed top-0 start-0 d-flex bg-black  justify-content-center align-items-center w-100">
     <img src="./assets/images/png/footer-logo.png" alt="" />
-</div>
+</div> -->
 
-<body class="overflow_hidden">
+<body class="overflow_hiddn">
     <button onclick="topFunction()" id="myBtn" title="Go to top" class="Btn-top">
         <img src="./assets/images/svg/arrow.svg" id="loader-arrow" alt="">
     </button>
@@ -171,7 +171,7 @@
                     <div class="col-12 col-sm-5 col-lg-3">
                         <div class="circle-hover position-relative">
                             <img class="white-circle" src="./assets/images/svg/Ellipse.svg" alt="">
-                            <div class="service-card">
+                            <div class="service-card pb-5">
                                 <img class="" src="./assets/images/svg/contract-line.svg" alt="">
                                 <h2 class="color-white fs-20 ff-Space fw-700 pt-3 pb-1 ">Smart Contract</h2>
                                 <p class="color-lightgrey fs-16 fw-400 ff-Space lh-150">Eu faucibus libero leo,
@@ -184,7 +184,7 @@
                     <div class="col-12 col-sm-5 col-lg-3">
                         <div class="circle-hover position-relative">
                             <img class="white-circle" src="./assets/images/svg/Ellipse.svg" alt="">
-                            <div class="service-card">
+                            <div class="service-card pb-4">
                                 <img class="" src="./assets/images/svg/proof.svg" alt="">
                                 <h2 class="color-white fs-20 ff-Space fw-700  pt-3 pb-1">Proof</h2>
                                 <p class="color-lightgrey fs-16 fw-400 ff-Space lh-150">Nisl, sed morbi porta orci nunc.
@@ -198,7 +198,7 @@
                     <div class="col-12 col-sm-5 col-lg-3">
                         <div class="circle-hover position-relative">
                             <img class="white-circle" src="./assets/images/svg/Ellipse.svg" alt="">
-                            <div class="service-card">
+                            <div class="service-card pb-4">
                                 <img class="" src="./assets/images/svg/nft.svg" alt="">
                                 <h2 class="color-white fs-20 ff-Space fw-700  pt-3 pb-1">NFT solutions</h2>
                                 <p class="color-lightgrey fs-16 fw-400 ff-Space lh-150">Id nam massa sit ut purus tortor
@@ -212,7 +212,7 @@
                     <div class="col-12 col-sm-5 col-lg-3">
                         <div class="circle-hover position-relative">
                             <img class="white-circle" src="./assets/images/svg/Ellipse.svg" alt="">
-                            <div class="service-card">
+                            <div class="service-card pb-5">
                                 <img class="" src="./assets/images/svg/support.svg" alt="">
                                 <h2 class="color-white fs-20 ff-Space fw-700 pb-1 pt-3 ">Support</h2>
                                 <p class="color-lightgrey fs-16 fw-400 ff-Space lh-150">Tellus id et fringilla auctor.
@@ -237,7 +237,7 @@
                         ultrices nunc. Ipsum, nibh egestas vehicula tellus. Molestie
                         adipiscing diam nibh lectus. Magna id nisl quis vestibulum rhoncus.</p>
                 </div>
-                <div class="row  py-5 py-lg-0 pt-lg-5 justify-content-center gap- gap-lg-0">
+                <div class="row pt-4 pt-lg-5 justify-content-center gap- gap-lg-0">
                     <div class="col-6 col-lg-3 ">
                         <div class="position-relative project-box cursor">
                             <img width="100%" src="./assets/images/png/img-1.png" alt="">
@@ -252,45 +252,45 @@
                     </div>
                     <div class="col-6 col-lg-3 pt-3 pt-lg-0">
                         <div class="position-relative project-box cursor">
+                            <img width="100%" src="./assets/images/png/img-4.png" alt="">
+                            <p class="color-white hover-text fs-20 ff-sunflower fw-700 lh-108 py-12">The Tokyo Tem</p>
+                        </div>
+                    </div>
+                    <div class="col-6 col-lg-3 pt-3 pt-lg-0 ">
+                        <div class="position-relative project-box cursor">
                             <img width="100%" src="./assets/images/png/img-3.png" alt="">
                             <p class="color-white hover-text fs-20 ff-sunflower fw-700 lh-108 py-12">The Tokyo Tem</p>
                         </div>
                     </div>
+                </div>
+                <div class="row  pt-24 justify-content-center gap- gap-lg-0">
                     <div class="col-6 col-lg-3 pt-3 pt-lg-0 ">
                         <div class="position-relative project-box cursor">
                             <img width="100%" src="./assets/images/png/img-4.png" alt="">
                             <p class="color-white hover-text fs-20 ff-sunflower fw-700 lh-108 py-12">The Tokyo Tem</p>
                         </div>
                     </div>
-                </div>
-                <div class="row d-none d-lg-flex  pt-24 justify-content-md-center gap-4 gap-lg-0">
-                    <div class="col-3 ">
+                    <div class="col-6 col-lg-3 pt-3 pt-lg-0 ">
                         <div class="position-relative project-box cursor">
                             <img width="100%" src="./assets/images/png/img-1.png" alt="">
                             <p class="color-white hover-text fs-20 ff-sunflower fw-700 lh-108 py-12">The Tokyo Tem</p>
                         </div>
                     </div>
-                    <div class="col-3 ">
+                    <div class="col-6 col-lg-3 pt-3 pt-lg-0 ">
+                        <div class="position-relative project-box cursor">
+                            <img width="100%" src="./assets/images/png/img-2-3.png" alt="">
+                            <p class="color-white hover-text fs-20 ff-sunflower fw-700 lh-108 py-12">The Tokyo Tem</p>
+                        </div>
+                    </div>
+                    <div class="col-6 col-lg-3 pt-3 pt-lg-0 ">
                         <div class="position-relative project-box cursor">
                             <img width="100%" src="./assets/images/png/img-2.png" alt="">
                             <p class="color-white hover-text fs-20 ff-sunflower fw-700 lh-108 py-12">The Tokyo Tem</p>
                         </div>
                     </div>
-                    <div class="col-3 ">
-                        <div class="position-relative project-box cursor">
-                            <img width="100%" src="./assets/images/png/img-3.png" alt="">
-                            <p class="color-white hover-text fs-20 ff-sunflower fw-700 lh-108 py-12">The Tokyo Tem</p>
-                        </div>
-                    </div>
-                    <div class="col-3 ">
-                        <div class="position-relative project-box cursor">
-                            <img width="100%" src="./assets/images/png/img-4.png" alt="">
-                            <p class="color-white hover-text fs-20 ff-sunflower fw-700 lh-108 py-12">The Tokyo Tem</p>
-                        </div>
-                    </div>
                 </div>
 
-                <span class="d-flex justify-content-center pb-5 py-lg-5">
+                <span class="d-flex justify-content-center  pt-3 pb-5 py-lg-5">
                     <a class="btn-view2 fs-16 color-black ff-sunflower fw-500 btn-hover2 " href="">View All</a>
                 </span>
             </div>
@@ -316,18 +316,18 @@
                         <div class="col-6 col-lg-4 -mx-32">
                             <img class="cursor" width="100%" src="./assets/images/png/footer-img2.png" alt="">
                         </div>
-                        <div class="col-6 d-none d-lg-block col-lg-4">
+                        <div class="col-6 col-lg-4">
                             <img class="cursor" width="100%" src="./assets/images/png/footer-img3.png" alt="">
                         </div>
                     </div>
                     <span class="d-flex justify-content-center pt-lg-5">
-                        <img class="cursor" src="./assets/images/png/footer-logo.png" alt="">
+                        <img class="cursor footer-logo" src="./assets/images/png/footer-logo.png" alt="">
                     </span>
                     <div class="d-flex align-items-center gap-3 justify-content-center pb-1 pt-5">
-                        <img class="cursor" src="./assets/images/svg/ig.svg" alt="">
-                        <img class="cursor" src="./assets/images/svg/twitter.svg" alt="">
-                        <img class="cursor fb" src="./assets/images/svg/fb.svg" alt="">
-                        <img class="mt-2 cursor" src="./assets/images/svg/yt.svg" alt="">
+                        <a href=""><img class="cursor" src="./assets/images/svg/ig.svg" alt=""></a>
+                        <a href=""><img class="cursor" src="./assets/images/svg/twitter.svg" alt=""></a>
+                        <a href=""><img class="cursor fb" src="./assets/images/svg/fb.svg" alt=""></a>
+                        <a href=""><img class="mt-2 cursor" src="./assets/images/svg/yt.svg" alt=""></a>
                     </div>
                 </div>
             </section>
